# auto-cursor

./: .env.example  .gitignore  README.md  auth.py  mail.py  main.py  pyproject.toml  reset.py  temp_mail.py  tempmail_plus.py
reset_helpers/: linux.py  windows.py
