[project]
name = "cursor-auto-new"
version = "0.1.0"
description = "Automatically create a new Cursor account and add it to your local machine"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4~=4.13.3",
    "curl-cffi~=0.9.0",
    "loguru~=0.7.3",
    "psutil~=7.0.0",
    "python-dotenv~=1.0.1",
    "types-psutil~=7.0.0.20250218",
    "zendriver~=0.5.1",
]
